syntax = "proto3";

option csharp_namespace = "ToDoGrpc";

import "google/api/annotations.proto";

package todoit;

service ToDoIt {
// Create
rpc CreateToDo(CreateToDoRequest) returns (CreateTodoResponse){
	option(google.api.http) = {
		post: "/v1/todo",
		body: "*"
	};
}

// Read Single
rpc ReadToDo(ReadToDoRequest) returns (ReadTodoResponse) {
	option(google.api.http) = {
		get: "/v1/todo/{id}",
	};
}

//Read List
rpc ListTodo(GetAllRequest) returns (GetAllResponse) {
	option(google.api.http) = {
		get: "/v1/todo"
	};
}

// Update
rpc UpdateToDo (UpdateToDoRequest) returns (UpdateToDoResponse) {
	option(google.api.http) = {
			put: "/v1/todo",
			body: "*"
		};
}

// Delete
rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse) {
	option(google.api.http) = {
		delete: "/v1/todo/{id}"
	};
}
}


message CreateToDoRequest{
	string title = 1;
	string description = 2;
}

message CreateTodoResponse{
	int32 id = 1;
}

message ReadToDoRequest{
	int32 id = 1;
}

message ReadTodoResponse{
	int32 id =1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;	
}

message GetAllRequest{}

message GetAllResponse{
	repeated ReadTodoResponse to_do = 1;
}

message UpdateToDoRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}
  
message UpdateToDoResponse {
    int32 id = 1;
}
  
message DeleteToDoRequest {
    int32 id = 1;
}
  
message DeleteToDoResponse {
    int32 id = 1;
}